--- a/style.css
+++ b/style.css
@@ -49,3 +49,16 @@ footer {
     justify-content: center;
     
 }
+
+#header-image{
+    background-image: url(".jpg");
+
+    /* Set a specific height */
+    height: 50%;
+  
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
