--- a/style.css
+++ b/style.css
@@ -305,6 +305,54 @@ nav > a:hover{
     cursor: pointer;
 }
 
+.dropContent {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    width: 150px;
+    overflow: auto;
+    border: 1px solid #ddd;
+    z-index: 1;
+    margin-top: 0px;
+    margin-left: 60px;
+}
+
+.dropContent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropContent > a:hover {
+    background-color: var(--blue);
+    cursor: pointer;
+}
+
+.downContent {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    width: 150px;
+    overflow: auto;
+    border: 1px solid #ddd;
+    z-index: 1;
+    margin-top: 0px;
+    margin-left: 100px;
+}
+
+.downContent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.downContent > a:hover {
+    background-color: var(--blue);
+    cursor: pointer;
+}
+
 .show {display: block;}
 
 /* hundtass (logga in) */
