--- a/style.css
+++ b/style.css
@@ -118,6 +118,89 @@ body {
     border-radius: 100%;
 }
 
+.content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* height: 70vh; */
+    flex-direction: column;
+}
+
+.one {
+    background-color: var(--yellow);
+    border-radius: 100px;
+    min-height: 320px;
+    width: 400px;
+    padding: 20px;
+    border: 8px solid var(--orange);
+}
+
+#profileDog {
+    /* height: 230px;
+    width: 230px; */
+    height: 15%;
+    width: 15%;
+    border-radius: 100px;
+    border: 8px solid var(--blue);
+    z-index: 1;
+    position: relative;
+    top: 20vh;
+    left: -250px;
+}
+
+.dogName {
+    font-family: var(--font-title);
+    font-weight: bolder;
+    font-size: 35px;
+}
+
+.one > div {
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: left;
+}
+
+.bold > p {
+    display: flex;
+    margin: 0px;
+    font-weight: normal;
+    padding-left: 5px;
+    margin-top: 0px;
+    font-size: 20px;
+}
+
+.two {
+    background-color: var(--blue);
+    padding: 30px;
+    border-radius: 100px;
+    border: 8px solid var(--pink);
+    z-index: 1;
+    position: relative;
+    left: 250px;
+    bottom: 15vh;
+}
+
+.three {
+    background-color: var(--pink);
+    padding: 30px;
+    border-radius: 100px;
+    border: 8px solid var(--blue);
+    z-index: 1;
+    position: relative;
+    bottom: 200px;
+}
+
+.three > .bold {
+    justify-content: center;
+}
+
+.bold {
+    font-weight: bolder;
+    display: flex;
+}
+
 .partOne {
     height: 145vh;
 }
@@ -262,7 +345,14 @@ nav > a:hover{
     color: var(--orange);
 }
 
-#filter {
+#filterOwner {
+    height: 110px;
+    display: flex;
+    width: 100%;
+    background-color: var(--white);
+}
+
+#filterSitter {
     height: 110px;
     display: flex;
     width: 100%;
@@ -286,6 +376,36 @@ nav > a:hover{
     font-size: 30px;
     transition: all .5s; 
     margin: 30px;
+}
+
+.dropbtnOwner {
+    height: 50px;
+    width: 100px;
+    border-radius: 0px;
+    cursor: pointer;
+    margin-bottom: 0px;
+    flex-grow: 1;
+    text-align: center;
+    font-family: var(--font-title);
+    text-decoration: none;
+    display: flex;
+    color: var(--black);
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    transition: all .5s; 
+    margin: 30px;
+    background-color: var(--orange);
+}
+
+.dropbtn:hover{
+    background-color: var(--green);
+    transition: all .5s; 
+}
+
+.dropbtnOwner:hover{
+    background-color: var(--pink);
+    transition: all .5s; 
 }
 
 .listTitle {
@@ -312,13 +432,13 @@ nav > a:hover{
     margin: 30px;
 }
 
-.dogsitter {
-    background-color: var(--turquoise);
+.dogSitter {
+    background-color: var(--orange);
 }
 
-/* .list {
-    display: grid;
-} */
+.dogOwner {
+    background-color: var(--turquoise);
+}
 
 .list > div  {
     display: grid;
@@ -335,6 +455,7 @@ nav > a:hover{
     justify-content: center;
     display: flex;
     flex-direction: column;
+    font-size: 20px;
 }
 
 .list > div > a {
@@ -343,23 +464,17 @@ nav > a:hover{
     display: flex;
     align-items: center;
     justify-content: center;
-
+    font-size: 20px;
 }
 
 .list > div > img {
     border-radius: 100px;
-    padding-top: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 15px;
 }
 
 .list > div > a:hover {
     color: var(--orange);
-}
-
-.dropbtn:hover{
-    background-color: var(--blue);
+    transition: all .5s; 
 }
 
 .dropdown-content {
