--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body {
     top: -140vh;
     font-size: 30px;
     font-family: var(--font-title);
+    transition: all .5s;
+    box-shadow: 5px 5px 5px #212121;
 }
 
 .homePagebuttonTwo {
@@ -47,6 +49,8 @@ body {
     top: -130vh;
     font-size: 30px;
     font-family: var(--font-title);
+    transition: all .5s;
+    box-shadow: 5px 5px 5px #212121;
 }
 
 .homePagebuttonThree {
@@ -57,6 +61,10 @@ body {
     margin-left: 50px;
     margin-top: 30px;
     font-family: var(--font-title);
+    transition: all .5s;
+    box-shadow: 5px 5px 5px #212121;
+    /* font-weight: bolder; */
+    font-size: 20px;
 }
 
 .homePagebuttonOne:hover {
@@ -280,6 +288,7 @@ body {
 
 input {
     height: 40px;
+    width: 200px;
     margin: 10px;
 }
 
@@ -289,6 +298,8 @@ button {
     margin: 10px;
     border-radius: 100%;
     background-color: var(--white);
+    transition: all .5s;
+    box-shadow: 5px 5px 5px #212121;
 }
 
 button:hover {
@@ -612,8 +623,6 @@ svg {
     flex-wrap: wrap;
     position: relative;
     left: -4vh;
-    
-    
 }
 
 #wrapper-owner, #wrapper-extra_info{
@@ -687,6 +696,19 @@ svg {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+#buttonsDiv > p {
+    margin: 30px;
+}
+
+.dogSitterButton, .dogOwnerButton {
+    height: 150px;
+    width: 150px;
+    font-size: 25px;
+    font-family: var(--font-title);
+    transition: all .5s;
+    box-shadow: 10px 5px 10px #212121;
 }
 
 /* slut på createAs */
