--- a/style.css
+++ b/style.css
@@ -236,20 +236,21 @@ nav {
 }
 
 nav > a {
-flex-grow: 1;
-text-align: center;
-font-family: var(--font-title);
-text-decoration: none;
-display: flex;
-color: var(--white);
-height: 30px;
-width: 100%;
-background-color: var(--green);
-justify-content: center;
-align-items: center;
-font-size: 6vh;
-transition: all .5s;
+    flex-grow: 1;
+    text-align: center;
+    font-family: var(--font-title);
+    text-decoration: none;
+    display: flex;
+    color: var(--white);
+    height: 30px;
+    width: 100%;
+    background-color: var(--green);
+    justify-content: center;
+    align-items: center;
+    font-size: 6vh;
+    transition: all .5s;
 }
+
 nav > a:hover{
     color: var(--orange);
 }
@@ -326,44 +327,43 @@ svg {
     left: 61vw;
     top: -35vh;
     display: flex;
-    justify-content: center;
-  
+    justify-content: center;  
     flex-wrap: wrap;
 }
- #wrapper-profile > h1{
+
+#wrapper-profile > h1{
     color: var(--orange);
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: var(--font-title);
-    
- }
- 
- #wrapper-profile > p, #wrapper-owner > p, #wrapper-extra_info > p, #wrapper-contact > p, #wrapper-dog > p, #wrapper-info > p {
-     color: var(--black);
-     font-size: 2vh;
-     font-family: var(--font-paragraph);
-     margin-left: 4px;
-     margin-right: 4px;
-     display: flex;
+}
+
+#wrapper-profile > p, #wrapper-owner > p, #wrapper-extra_info > p, #wrapper-contact > p, #wrapper-dog > p, #wrapper-info > p {
+    color: var(--black);
+    font-size: 2vh;
+    font-family: var(--font-paragraph);
+    margin-left: 4px;
+    margin-right: 4px;
+    display: flex;
     justify-content: center;
     align-items: center;
- }
+}
  /* #wrapper-profile{
 
  } */
 
- #change-settings-button{
+#change-settings-button{
     position: relative;
     left: 85vw;
     top: 14vh;
- }
+}
 
- #delete-account-button{
+#delete-account-button{
     position: relative;
     left: 78vw;
     top: -5vh;
- }
+}
 
 /* createAS */ 
 #createAsWrapper {
@@ -412,12 +412,7 @@ svg {
     left: 78vw; 
 }
 
-
 /* create DogOwner */
-#createDogowner {
-    font-family: var(--font-title);
-    display: flex;
-}
 
 .welcomemessage {
     display: grid;
@@ -425,24 +420,14 @@ svg {
     justify-content: center;
     align-items: center;
     width: 100%;
-    grid-row: 1;
     grid-column: 1 / 3;
-    margin-bottom: 20vh; 
+    font-size: 3vh;
 }
 
 .welcomemessage > p {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-
-.createAccount {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 10% 1fr 1fr;    
-    font-family: var(--font-title);
-    width: 80vw;
 }
 
 .formWrapper {
@@ -454,109 +439,159 @@ svg {
 }
 
 #dogDays {
-    display: grid;
-    justify-content: center;
+    display: flex;
     align-items: center;
-    width: 35vw;
-}
-#dogowner {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    width: 35vw;
+    flex-direction: column;
+    background-color: var(--white);
+    border-top-right-radius: 5%;
+    border-bottom-right-radius: 5%;
+    grid-column: 2;
+    margin-top: 5vh;
+    padding-top: 5vh;
+    height: 80vh;
+
 }
 
-#dogPic {
+#dogowner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--white);
+    border-right: 5px solid var(--pink);
+    border-top-left-radius: 5%;
+    border-bottom-left-radius: 5%;
+    grid-column: 1;
+    margin-top: 5vh;
+    padding-top: 5vh;
+    height: 80vh;
+
+}
+
+.createButton {
+    position: relative;
+    left: 47vw;
+    bottom: 10vh;
+    height: 15vh;
+    width: 15vh;
+    background-color: var(--green);
+
+}
+
+#dogPicDiv {
     background-color: var(--white);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    grid-column: 2 / 3;
-    border-top-right-radius: 50%;
-    border-bottom-right-radius: 50%;
+    border-bottom-right-radius: 5%;
+    border-top-right-radius: 5%;
     height: 80vh;
-    border-top: 8px solid var(--orange);
-    border-right: 8px solid var(--orange);
-    border-bottom: 8px solid var(--orange);
+    margin-top: 5vh;
+
 }
 
-.fakePic {
-    height: 15vh;
-    width: 15vh;
-    background-image: url(Images/dog-head.png);
+.dogPic {
+    height: 30vh;
+    width: 30vh;
+    background-image: url(Images/dogavatar.jpeg);
     background-position: center;
     background-size: cover;
     border-radius: 50%;
     border: 2px solid black;
-}
-#buttonDogowner {
-    position: relative;
-    left: 70vw;
-    background-color: var(--green);
-    transition: ease-in-out 0.5s;
-}
-
-#buttonDogowner:hover {
-    background-color: var(--blue);
-    height: 12vh;
-    width: 12vh;
 }
 
 #dogDiv {
     background-color: var(--white);
     display: flex;
     flex-direction: column;
-    grid-row: 3;
-    grid-column: 1 / 2;
     justify-content: center;
     align-items: center;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    border-top-left-radius: 50%;
-    border-bottom-left-radius: 50%;
+    border-top-left-radius: 5%;
+    border-bottom-left-radius: 5%;
     height: 80vh;
-    padding-left: 15vh;
-    border-top: 8px solid var(--orange);
-    border-left: 8px solid var(--orange);
-    border-bottom: 8px solid var(--orange);
+    margin-top: 5vh;
+
 }
 
 #dogDiv > #genderDiv {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    width: 18vw;
-    grid-column: 1;
+    justify-content: center;
+    width: 15vw;
 } 
 
 .extraInfo {
-    height: 20vh;
-}
+    height: 15vh;
+} 
 
 /* create DogSitter */ 
+
+.createAccount {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    font-family: var(--font-title);
+    width: 60vw;
+}
+
 #dogsitter {
     background-color: var(--white);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    grid-column: 1;
+    border-right: 5px solid var(--pink);
+    border-top-left-radius: 5%;
+    border-bottom-left-radius: 5%;
+    height: 105vh;
+}
+
+#profilePicDiv {
+    grid-column: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
+    background-color: var(--white);
+    border-top-right-radius: 5%;
+    border-bottom-right-radius: 5%;
+    margin-top: 5vh;    
+}
+
+#actualPicture {
+    height: 30vh;
+    width: 30vh;
+    background-image: url(images/avatar.jpeg);
+    background-position: center;
+    border-radius: 50%;
+    background-size: cover;
+    border: 2px solid black;
 }
 
 #areaBox {
-    background-color: var(--yellow);
+    background-color: var(--white);
+    grid-column: 2;
+    border-top-right-radius: 5%;
+    border-bottom-right-radius: 5%;
+    height: 105vh;
+}
+
+.areasText {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
 #dayBox { 
-    background-color: var(--orange);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 50vw;
+    padding-top: 5vh;
+    background-color: var(--white);
+    grid-column: 1;
+    border-right: 5px solid var(--pink);
+    margin-top: 5vh;
+    border-top-left-radius: 5%;
+    border-bottom-left-radius: 5%;
+    height: 80vh;
 }
+
+/* slut på create dogSitter */ 
