--- a/style.css
+++ b/style.css
@@ -590,28 +590,34 @@ svg {
 
 #wrapper-dog, #wrapper-info{
     background-color: var(--blue);
-    border-radius: 40px;
+    border-radius: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     grid-area: 3 / 1 / 3 / 3;
     margin: 6vh;
+    border: 2vh solid var(--yellow);
+
 }
 
 #wrapper-dog > p , #wrapper-info > p{
-    
+    font-family: var(--font-title);
+    color: var(--white);
+    font-size: 3vw;
 }
 #wrapper-contact{
-    height: 25vh;
-    width: 25vw;
     background-color: var(--pink);
-    border-radius: 40px;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    position: relative;
-    left: -4vh;
+    grid-area: 3 / 3 / 3 / 2;
+    align-items: center;
+    color: var(--white);
+    font-family: var(--font-title);
+    height: 300px;
+    width: 300px;
     
     
 }
@@ -636,15 +642,14 @@ svg {
     font-family: var(--font-title);
     grid-area: 1/1/2/3;
     font-size: 8vh;
+    height: 30vh;
+    margin: 0;
     
  }
  
  #wrapper-profile > p, #wrapper-owner > p, #wrapper-extra_info > p, #wrapper-contact > p, #wrapper-dog > p, #wrapper-info > p {
-     color: var(--black);
-     font-size: 2vh;
-     font-family: var(--font-paragraph);
-     margin-left: 4px;
-     margin-right: 4px;
+     margin-left: 20px;
+     margin-right: 20px;
      display: flex;
     justify-content: center;
     align-items: center;
@@ -656,6 +661,7 @@ svg {
     justify-content: center;
     align-items: center;
     grid-area: 2 / 1 / 3 / 3;
+    height: 0;
 
  }
 
