--- a/style.css
+++ b/style.css
@@ -1022,6 +1022,12 @@ input#Fosie, input#Husie, input#Hyllie, input#Kirseberg, input#Limhamn-Bunkeflo,
 /* slut på create dogSitter */ 
 
 /*Update.php*/
+#dogsitter-form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 #dayBoxUpdate { 
     background-color: var(--pink);
     display: flex;
@@ -1030,9 +1036,14 @@ input#Fosie, input#Husie, input#Hyllie, input#Kirseberg, input#Limhamn-Bunkeflo,
     justify-content: center;
     width: 50vw;
 }
-
+.dayWrapperUpdate{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1vw;
+}
 #areaBoxUpdate {
-    background-color: var(--white);
+    background-color: var(--pink);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1042,7 +1053,7 @@ input#Fosie, input#Husie, input#Hyllie, input#Kirseberg, input#Limhamn-Bunkeflo,
 .createAccountUpdate{    
     font-family: var(--font-title);
     width: 50vw;
-    background-color: var(--white);
+    background-color: var(--pink);
 }
 .input-text{
     display: flex;
@@ -1084,4 +1095,8 @@ input#Fosie, input#Husie, input#Hyllie, input#Kirseberg, input#Limhamn-Bunkeflo,
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.feedbackMessageUpdate{
+    font-size: 20vh;
+    font-family: var(--font-title);
 }
