--- a/style.css
+++ b/style.css
@@ -635,50 +635,53 @@ svg {
 /* Min Profil Sida*/
 
 #wrapper-dog, #wrapper-info{
-    background-color: var(--blue);
-    border-radius: 50px;
-    display: flex;
+    isplay: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    grid-area: 3 / 1 / 3 / 3;
+    flex-direction: column;
     margin: 6vh;
     border: 2vh solid var(--yellow);
-
-}
-
-#wrapper-dog > p , #wrapper-info > p{
+    position: relative;
+    left: 316px;
+    top: -15px;
+    height: 391px;
+    border-radius: 50px;
+    background-color: var(--blue);
     font-family: var(--font-title);
+    font-size: 20px;
     color: var(--white);
-    font-size: 3vw;
+    width: 50%;
 }
+
 #wrapper-contact{
     background-color: var(--pink);
     border-radius: 50%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    grid-area: 3 / 3 / 3 / 2;
     align-items: center;
-    color: var(--white);
-    font-family: var(--font-title);
-    height: 300px;
-    width: 300px;
-    
-    
-}
+    height: 220px;
+    width: 220px;
+    position: relative;
+    left: 200px;
+    top: -386px;
+    flex-direction: column;
+    border: 10px solid var(--orange);
+    }
 
 #wrapper-owner, #wrapper-extra_info{
-    height: 45vh;
-    width: 30vw;
-    background-color: var(--yellow);
-    border-radius: 40px;
+    height: 250px;
+    width: 250px;
+    background-color: var(--green);
+    border-radius: 50%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     position: relative;
-    right: 32vw;
-    top: -14vh;
-    flex-wrap: wrap;
+    right: -234px;
+    top: -453px;
+    border: 10px solid var(--pink)
 }
 
 #wrapper-profile > h1{
@@ -687,19 +690,17 @@ svg {
     justify-content: center;
     align-items: center;
     font-family: var(--font-title);
-    grid-area: 1/1/2/3;
     font-size: 8vh;
 }
 
 #wrapper-profile > p, #wrapper-owner > p, #wrapper-extra_info > p, #wrapper-contact > p, #wrapper-dog > p, #wrapper-info > p {
-    color: var(--black);
-    font-size: 2vh;
-    font-family: var(--font-paragraph);
     margin-left: 4px;
     margin-right: 4px;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: var(--white);
+    font-family: var(--font-title);
 }
 
  #profile-image{
@@ -707,8 +708,8 @@ svg {
     display: flex;
     justify-content: center;
     align-items: center;
-    grid-area: 2 / 1 / 3 / 3;
-    height: 0;
+    height: 200px;
+    width: 200px;
 
  }
 
@@ -733,9 +734,10 @@ svg {
     background-repeat: no-repeat;
  }
  #wrapper-profile{
-     display: grid;
-     grid-template-columns: 50% 50%;
-     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+background-color: var(--white);
+height: 100%;
+width: 100%;
+overflow: hidden;
  }
 
 /* createAS */ 
