--- a/style.css
+++ b/style.css
@@ -30,6 +30,35 @@ body {
     margin: 10px;
 }
 
+.createAc {
+    grid-column: 3;
+    grid-row: 3;
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+    font-size: 20px;
+}
+
+.createAcBold {
+    grid-column: 3;
+    grid-row: 3;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    color: var(--orange);
+    cursor: pointer;
+    font-weight: bolder;
+    margin-top: 60px;
+    text-decoration: none;
+    width: 120px;
+    justify-self: center;
+    height: 10px;
+}
+
+.createAcBold:hover {
+    color: var(--blue);
+}
+
 .back {
     grid-column: 5;
     display: flex;
@@ -41,15 +70,31 @@ body {
     height: 80px;
     width: 80px;
     border-radius: 100px;
-    background-color: var(--orange);
+    background-color: var(--white);
     font-size: 30px;
     font-family: var(--font-title);
     transition: all .5s;
     box-shadow: 5px 5px 5px #212121;
+    font-family: var(--font-paragraph);
 }
 
-.backToHome:hover {
-    background-color: var(--pink);
+.backToHomeCreateAs {
+    height: 80px;
+    width: 80px;
+    border-radius: 100px;
+    background-color: var(--white);
+    font-size: 30px;
+    font-family: var(--font-title);
+    transition: all .5s;
+    box-shadow: 5px 5px 5px #212121;
+    position: absolute;
+    right: 3%;
+    top: 27%;
+    font-family: var(--font-paragraph);
+}
+
+.backToHome:hover, .backToHomeCreateAs:hover{
+    background-color: var(--orange);
 }
 
 .homePagebuttonOne {
@@ -159,12 +204,13 @@ body {
     justify-content: center;
     /* height: 70vh; */
     flex-direction: column;
+    background-color: var(--white);
 }
 
 .one {
     background-color: var(--yellow);
     border-radius: 100px;
-    min-height: 320px;
+    min-height: 360px;
     width: 400px;
     padding: 20px;
     border: 8px solid var(--orange);
@@ -210,6 +256,7 @@ body {
     padding-left: 5px;
     margin-top: 0px;
     font-size: 20px;
+    margin-bottom: 20px;
 }
 
 .two {
@@ -326,6 +373,11 @@ button {
     background-color: var(--white);
     transition: all .5s;
     box-shadow: 5px 5px 5px #212121;
+    font-family: var(--font-paragraph);
+}
+
+.logInBtn {
+    font-size: 20px;
 }
 
 button:hover {
@@ -510,7 +562,6 @@ nav > a:hover{
     text-decoration: none;
     display: flex;
     align-items: center;
-    justify-content: center;
     font-size: 20px;
 }
 
@@ -529,6 +580,8 @@ nav > a:hover{
     z-index: 1;
     margin-top: 0px;
     margin-left: 10px;
+    block-size: fit-content;
+    align-self: center;
 }
 
 .dropdown-content a {
