--- a/style.css
+++ b/style.css
@@ -278,6 +278,7 @@ body {
     z-index: 1;
     position: relative;
     bottom: 200px;
+    max-width: 250px;
 }
 
 .three > .bold {
@@ -436,167 +437,77 @@ nav > a:hover{
 }
 
 /* read.php/read.js */
-#listImage {
-    border-radius: 100px;
-    margin: 15px;
-    height: 100px;
-    width: 100px;
-    border: 0px;
+.dogSitter, .readBodyOwner  {
+    background-color: var(--orange);
+    font-family: var(--font-paragraph);
+}
+
+.dogOwner, .readBodySitter {
+    background-color: var(--turquoise);
+    font-family: var(--font-paragraph);
 }
 
 #filterOwner {
     height: 110px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
-    background-color: var(--white);
+    background-color: var(--orange);
 }
 
 #filterSitter {
     height: 110px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     background-color: var(--turquoise);
 }
 
-.dropbtn {
+#filterSitter > div:nth-child(1) {
+    grid-column: 1;
+}
+
+#filterSitter > div:nth-child(2) {
+    grid-column: 2;
+}
+
+#filterSitter > div:nth-child(3) {
+    grid-column: 3;
+}
+
+#dropBtn {
     height: 50px;
-    width: 100px;
+    width: 28VW;
     border-radius: 0px;
     cursor: pointer;
     margin-bottom: 0px;
-    flex-grow: 1;
-    text-align: center;
     font-family: var(--font-title);
-    text-decoration: none;
-    display: flex;
     color: var(--black);
-    justify-content: center;
-    align-items: center;
     font-size: 30px;
     transition: all .5s; 
     margin: 30px;
-}
-
-.dropbtnOwner {
-    height: 50px;
-    width: 100px;
-    border-radius: 0px;
-    cursor: pointer;
     margin-bottom: 0px;
-    flex-grow: 1;
-    text-align: center;
-    font-family: var(--font-title);
-    text-decoration: none;
-    display: flex;
-    color: var(--black);
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    transition: all .5s; 
-    margin: 30px;
-    background-color: var(--orange);
 }
 
-.dropbtn:hover{
-    background-color: var(--green);
-    transition: all .5s; 
-}
-
-.dropbtnOwner:hover{
+#dropBtn:hover{
     background-color: var(--pink);
     transition: all .5s; 
 }
 
-.dogSitter {
-    background-color: var(--orange);
-}
-
-.dogOwner {
-    background-color: var(--turquoise);
-}
-
-.listTitle {
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 1fr;
-}
-
-.listTitle > div {
-    height: 10px;
-    width: 100px;
-    border-radius: 0px;
-    cursor: pointer;
-    margin-bottom: 0px;
-    text-align: center;
-    font-family: var(--font-title);
-    text-decoration: none;
-    flex-direction: row;
-    display: flex;
-    color: var(--black);
-    justify-content: center;
-    align-items: center;
-    font-size: 25px;
-    transition: all .5s; 
-    margin: 30px;
-}
-
-.list > div  {
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 1fr;
-    height: 130px;
-    background-color: var(--white);
-    margin: 10px;
-}
-
-.list > div > p {
-    flex-grow: 1;
-    text-align: left;
-    padding-left: 40px;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    font-size: 20px;
-}
-
-.list > div > a {
-    color: black;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-}
-
-.list > div > a:hover {
-    color: var(--orange);
-    transition: all .5s; 
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
+#dropOne, #dropTwo, #dropThree {
+    margin-left: 30px;
+    width: 27.8vw;
     background-color: #f6f6f6;
-    width: 150px;
     overflow: auto;
     border: 1px solid #ddd;
     z-index: 1;
-    margin-top: 0px;
-    margin-left: 10px;
-    block-size: fit-content;
-    align-self: center;
 }
 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
+#dropOne > a, #dropTwo > a, #dropThree > a {
+    font-size: 20px;
+} 
 
-.dropdown-content > a:hover {
-    background-color: var(--blue);
-    cursor: pointer;
-}
-
-.dropContent {
+.dropDownContent {
     display: none;
     position: absolute;
     background-color: #f6f6f6;
@@ -606,6 +517,30 @@ nav > a:hover{
     z-index: 1;
     margin-top: 0px;
     margin-left: 60px;
+}
+
+.dropDownContent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropDownContent > a:hover {
+    background-color: var(--blue);
+    cursor: pointer;
+}
+
+.dropContent {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    /* width: 150px; */
+    overflow: auto;
+    border: 1px solid #ddd;
+    z-index: 1;
+    /* margin-top: 0px;
+    margin-left: 60px; */
 }
 
 .dropContent a {
@@ -645,6 +580,80 @@ nav > a:hover{
 }
 
 .show {display: block;}
+
+.listTitle {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 1fr;
+}
+
+#listImage {
+    border-radius: 100px;
+    margin: 10px;
+    height: 100px;
+    width: 100px;
+    border: 2px solid;
+    /* height: 75%;
+    width: 30%; */
+}
+
+.listTitle > div {
+    height: 10px;
+    width: 100px;
+    border-radius: 0px;
+    cursor: pointer;
+    margin-bottom: 0px;
+    text-align: center;
+    font-family: var(--font-title);
+    text-decoration: none;
+    flex-direction: row;
+    display: flex;
+    color: var(--black);
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    transition: all .5s; 
+    margin: 30px;
+    margin-bottom: 0px;
+}
+
+.list > div  {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 1fr;
+    height: 130px;
+    background-color: var(--white);
+    margin: 30px;
+    border: 2px solid;
+}
+
+.list > div:last-child {
+    margin-bottom: 50px;
+}
+
+.list > div > p {
+    flex-grow: 1;
+    text-align: left;
+    padding-left: 40px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+}
+
+.list > div > a {
+    color: black;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    width: 70px;
+    height: 10px;
+    align-self: center;
+}
+
+.list > div > a:hover {
+    color: var(--orange);
+    transition: all .5s; 
+}
 /* read.php/read.js */
 
 /* hundtass (logga in) */
