--- a/style.css
+++ b/style.css
@@ -1189,3 +1189,20 @@ input#Fosie, input#Husie, input#Hyllie, input#Kirseberg, input#Limhamn-Bunkeflo,
     font-size: 20vh;
     font-family: var(--font-title);
 }
+
+.feedbackDiv {
+    position: fixed;
+    top: 30vh;
+    left: calc(50vw - 25vh);
+    width: 50vh;
+    height: 50vh;
+    background-color: var(--green);
+    font-family: var(--font-title);
+    display: flex;
+    font-size: 3vh;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid var(--orange);
+    border-radius: 50%;
+    text-align: center;
+}
