--- a/style.css
+++ b/style.css
@@ -1206,3 +1206,18 @@ input#Fosie, input#Husie, input#Hyllie, input#Kirseberg, input#Limhamn-Bunkeflo,
     border-radius: 50%;
     text-align: center;
 }
+.feedbackMessage {
+    position: relative;
+    top: -259vh;
+    left: calc(50vw - 12.5vw);
+    width: 25vw;
+    height: 13vh;
+    font-family: var(--font-title);
+    background-color: var(--yellow);
+    border: 5px solid var(--orange);
+    font-size: larger;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
