--- a/style.css
+++ b/style.css
@@ -540,21 +540,13 @@ nav > a:hover{
     display: block;
 }
 
-.dropDownContent > a:hover {
-    background-color: var(--blue);
-    cursor: pointer;
-}
-
 .dropContent {
     display: none;
     position: absolute;
     background-color: #f6f6f6;
-    /* width: 150px; */
     overflow: auto;
     border: 1px solid #ddd;
     z-index: 1;
-    /* margin-top: 0px;
-    margin-left: 60px; */
 }
 
 .dropContent a {
@@ -564,8 +556,8 @@ nav > a:hover{
     display: block;
 }
 
-.dropContent > a:hover {
-    background-color: var(--blue);
+.dropContent > a:hover, .downContent > a:hover, .dropDownContent > a:hover {
+    background-color: var(--pink);
     cursor: pointer;
 }
 
@@ -586,11 +578,6 @@ nav > a:hover{
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-}
-
-.downContent > a:hover {
-    background-color: var(--blue);
-    cursor: pointer;
 }
 
 .show {display: block;}
