--- a/style.css
+++ b/style.css
@@ -711,7 +711,6 @@ svg {
     height: 391px;
     border-radius: 50px;
     background-color: var(--blue);
-    font-family: var(--font-title);
     font-size: 20px;
     color: var(--white);
     width: 700px;
@@ -750,9 +749,9 @@ svg {
 
 #wrapper-profile > h1{
     color: var(--orange);
-    position: relative;
-    left: 459px;
-    top: 26px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: var(--font-title);
     font-size: 8vh;
 }
@@ -764,7 +763,7 @@ svg {
     justify-content: center;
     align-items: center;
     color: var(--white);
-    font-family: var(--font-title);
+    font-family: var(--font-paragraph);
     flex-direction: column;
     margin-top: 2px;
     margin-bottom: 2px;
@@ -815,7 +814,7 @@ svg {
     background-repeat: no-repeat;
  }
  #wrapper-profile{
-background-color: var(--white);
+background-color: var(--pink);
 height: 100%;
 width: 100%;
 overflow: hidden;
