--- a/style.css
+++ b/style.css
@@ -204,27 +204,24 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* height: 70vh; */
     flex-direction: column;
-    background-color: var(--white);
+    background-color: var(--turquoise);
 }
 
 .one {
-    background-color: var(--yellow);
+    background-color: var(--white);
     border-radius: 100px;
     min-height: 360px;
     width: 400px;
     padding: 20px;
-    border: 8px solid var(--orange);
+    border: 8px solid var(--purple);
 }
 
 #profileDog {
-    /* height: 230px;
-    width: 230px; */
     height: 15%;
     width: 15%;
     border-radius: 100px;
-    border: 8px solid var(--blue);
+    border: 8px solid var(--orange);
     z-index: 1;
     position: relative;
     top: 20vh;
@@ -263,7 +260,7 @@ body {
 }
 
 .two {
-    background-color: var(--blue);
+    background-color: var(--yellow);
     padding: 30px;
     border-radius: 100px;
     border: 8px solid var(--pink);
@@ -285,7 +282,7 @@ body {
     background-color: var(--pink);
     padding: 30px;
     border-radius: 100px;
-    border: 8px solid var(--blue);
+    border: 8px solid var(--orange);
     z-index: 1;
     position: relative;
     bottom: 200px;
@@ -430,6 +427,11 @@ nav {
     background-color: var(--green);
     padding-top: 4vh;
     padding-bottom: 4vh;
+    border-style: ridge;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-width: 10px;
 }
 
 nav > a {
@@ -592,13 +594,19 @@ nav > a:hover{
     margin-bottom: 20px;
 }
 
+#cardOwner {
+    border: 10px solid var(--turquoise);
+}
+
 #listImage {
     border-radius: 100px;
     height: 150px;
     width: 150px;
-    border: 2px solid;
+    border: 10px solid var(--blue);
     align-self: center;
     margin: 30px;
+    border-style: dotted;
+    border-width: 6px;
 }
 
 .listTitle > div {
@@ -625,10 +633,10 @@ nav > a:hover{
 .list > div  {
     display: grid;
     grid-template-columns: 2fr 2fr 2fr 2fr 2fr 1fr;
-    /* height: 130px; */
     background-color: var(--white);
     margin: 30px;
-    border: 2px solid;
+    border: 10px solid var(--green);
+    border-radius: 30px;
 }
 
 .list > div:last-child {
@@ -645,19 +653,25 @@ nav > a:hover{
     font-size: 20px;
 }
 
+.list > div > p:first-child {
+    font-family: var(--font-title);
+    font-size: 30px;
+}
+
 .list > div > a {
-    color: black;
+    color: var(--orange);
     text-decoration: none;
     display: flex;
     align-items: center;
     font-size: 20px;
-    width: 70px;
+    width: 90px;
     height: 10px;
     align-self: center;
+    font-weight: bolder;
 }
 
 .list > div > a:hover {
-    color: var(--orange);
+    color: var(--blue);
     transition: all .5s; 
 }
 /* read.php/read.js */
