--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
     --black: #212121;
     --purple: #CDB0E8;
 
-    --font-title: Indie Flower;
-    --font-paragraph: Rounded Mplus 1c;
+    --font-title: 'Indie Flower';
+    --font-paragraph: 'M PLUS Rounded 1c';
     --home-btn: 200px;
     
 }
