--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --purple: #CDB0E8;
 
     --font-title: 'Indie Flower';
-    --font-paragraph: 'M PLUS Rounded 1c';
+    --font-paragraph: 'Raleway', sans-serif;
     --home-btn: 200px;
     
 }
