--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
     font-family: var(--font-title);
     transition: all .5s;
     box-shadow: 5px 5px 5px #212121;
-    font-family: var(--font-paragraph);
+    font-family: var(--font-title);
 }
 
 .backToHomeCreateAs {
@@ -393,6 +393,7 @@ button {
 
 .logInBtn {
     font-size: 20px;
+    font-family: var(--font-title);
 }
 
 button:hover {
@@ -1181,14 +1182,15 @@ input#Fosie, input#Husie, input#Hyllie, input#Kirseberg, input#Limhamn-Bunkeflo,
 }
 
 #update-button{
-    height: 80px;
-    width: 80px;
+    height: 85px;
+    width: 85px;
     margin: 10px;
     border-radius: 100%;
     background-color: var(--turquoise);
     transition: all .5s;
+    font-size: 17px;
     box-shadow: 5px 5px 5px #212121;
-    font-family: var(--font-paragraph);
+    font-family: var(--font-title);
 }
 #update-button:hover{
     background-color: var(--blue);
