--- a/style.css
+++ b/style.css
@@ -815,7 +815,7 @@ svg {
     background-color: var(--turquoise);
 }
 
-#delete-account-button{
+.delete-account-button{
     position: relative;
     left: 1006px;
     top: -1227px;
@@ -824,7 +824,7 @@ svg {
     font-family: var(--font-title);
     transition: .5 all;
 }
-#delete-account-button:hover{
+.delete-account-button:hover{
     background-color: var(--pink);
 }
 
